parser.output
Terminals which are not used

   ELSE
   ELIF
   UTIL
   RET
   DP
   POINT
   SHARP
   DOLLAR


Grammar

    0 $accept: program $end

    1 program: stmtlist

    2 block: CURLOPEN stmtlist CURLCLOSE

    3 switchblock: CURLOPEN labeled_stmtlist CURLCLOSE

    4 labeled_stmtlist: labeled_statement
    5                 | labeled_stmtlist labeled_statement

    6 labeled_statement: CASE PAROPEN expression PARCLOSE stmtlist

    7 explist: expression
    8        | explist COMMA expression

    9 exp_cast_list: /* empty */
   10              | ffi_cast expression COMMA exp_cast_list

   11 parlist: PAROPEN idlist PARCLOSE
   12        | PAROPEN PARCLOSE

   13 arglist: PAROPEN explist PARCLOSE
   14        | PAROPEN PARCLOSE

   15 idlist: ID
   16       | idlist ID

   17 stmtlist: statement
   18         | stmtlist statement

   19 assignment: idlist assop explist

   20 assop: ASSOP
   21      | ASPLUS
   22      | ASMINUS
   23      | ASMUL
   24      | ASDIV
   25      | ASMOD
   26      | ASPOW
   27      | ASBINOR
   28      | ASBINAND
   29      | ASBINXOR
   30      | ASRIGHTSHIFT
   31      | ASLEFTSHIFT

   32 expression: expression OR expression
   33           | expression AND expression
   34           | expression BINOR expression
   35           | expression BINXOR expression
   36           | expression BINAND expression
   37           | expression EQUAL expression
   38           | expression NOTEQUAL expression
   39           | expression GREATERTHAN expression
   40           | expression LESSTHAN expression
   41           | expression GREATER expression
   42           | expression LESS expression
   43           | expression LEFTSHIFT expression
   44           | expression RIGHTSHIFT expression
   45           | expression PLUS expression
   46           | expression MINUS expression
   47           | expression MUL expression
   48           | expression DIV expression
   49           | expression MOD expression
   50           | expression POW expression
   51           | COMPL expression
   52           | NOT expression
   53           | evalexpression

   54 evalexpression: fceexp
   55               | fceexp_rc
   56               | listconstructor
   57               | ffi_struct_def
   58               | end_exp
   59               | evalexpression BOXOPEN expression BOXCLOSE
   60               | functioncall

   61 functioncall: evalexpression arglist

   62 end_exp: ID
   63        | TRUE
   64        | FALSE
   65        | NUMBER
   66        | STRING
   67        | PAROPEN expression PARCLOSE

   68 functiondef: FUNCTION ID parlist block
   69            | FUNCTION ID parlist hotkeydef block
   70            | FUNCTION ID parlist hotstringdef block

   71 hotkeydef: ON KEYSTROKE expression

   72 hotstringdef: ON HOTSTRING expression

   73 ffi_struct_def: CURLOPEN exp_cast_list CURLCLOSE
   74               | MUL CURLOPEN exp_cast_list CURLCLOSE

   75 ffi_cast: FFI_CHAR
   76         | FFI_SHORT
   77         | FFI_INT
   78         | FFI_LONG
   79         | FFI_LONG_LONG
   80         | FFI_DOUBLE
   81         | FFI_FLOAT
   82         | FFI_LONG_DOUBLE
   83         | ffi_void_cast

   84 ffi_void_cast: FFI_VOIDPTR

   85 listconstructor: BOXOPEN BOXCLOSE
   86                | BOXOPEN fieldlist BOXCLOSE

   87 fieldlist: field
   88          | fieldlist COMMA field

   89 field: expression

   90 statement: assignment SEMI
   91          | BREAK SEMI
   92          | CONTINUE SEMI
   93          | block SEMI
   94          | functioncall SEMI
   95          | functiondef
   96          | GLOBAL assignment SEMI
   97          | GLOBAL functiondef
   98          | IF PAROPEN expression PARCLOSE block
   99          | FOR PAROPEN assignment SEMI expression SEMI explist PARCLOSE block
  100          | FOR idlist IN explist block
  101          | WHILE PAROPEN expression PARCLOSE block
  102          | DO block WHILE PAROPEN expression PARCLOSE SEMI
  103          | SWITCH PAROPEN expression PARCLOSE switchblock
  104          | fceblock

  105 fceblock: EXTERNAL FCELANG FCEB_CODE

  106 fceexp: PAROPEN NOT FCELANG PARCLOSE FCEB_CODE

  107 fceexp_rc: PAROPEN QMARK FCELANG PARCLOSE FCEB_CODE


Terminals, with rules where they appear

$end (0) 0
error (256)
OR (258) 32
AND (259) 33
BINOR (260) 34
BINXOR (261) 35
BINAND (262) 36
NOTEQUAL (263) 38
EQUAL (264) 37
LESS (265) 42
GREATER (266) 41
LESSTHAN (267) 40
GREATERTHAN (268) 39
RIGHTSHIFT (269) 44
LEFTSHIFT (270) 43
MINUS (271) 46
PLUS (272) 45
MOD (273) 49
DIV (274) 48
MUL (275) 47 74
POW (276) 50
NOT (277) 52 106
COMPL (278) 51
ASSOP (279) 20
ASPLUS (280) 21
ASMINUS (281) 22
ASMUL (282) 23
ASDIV (283) 24
ASMOD (284) 25
ASPOW (285) 26
ASBINOR (286) 27
ASBINAND (287) 28
ASBINXOR (288) 29
ASRIGHTSHIFT (289) 30
ASLEFTSHIFT (290) 31
KEYSTROKE (291) 71
HOTSTRING (292) 72
ON (293) 71 72
IF (294) 98
GLOBAL (295) 96 97
ELSE (296)
ELIF (297)
CONTINUE (298) 92
BREAK (299) 91
UTIL (300)
FOR (301) 99 100
IN (302) 100
WHILE (303) 101 102
DO (304) 102
SWITCH (305) 103
RET (306)
CASE (307) 6
FUNCTION (308) 68 69 70
EXTERNAL (309) 105
TRUE (310) 63
FALSE (311) 64
STRING (312) 66
NUMBER (313) 65
ID (314) 15 16 62 68 69 70
FCELANG (315) 105 106 107
FCEB_CODE (316) 105 106 107
FFI_CHAR (317) 75
FFI_SHORT (318) 76
FFI_INT (319) 77
FFI_LONG (320) 78
FFI_LONG_LONG (321) 79
FFI_DOUBLE (322) 80
FFI_FLOAT (323) 81
FFI_LONG_DOUBLE (324) 82
FFI_VOIDPTR (325) 84
CURLOPEN (326) 2 3 73 74
CURLCLOSE (327) 2 3 73 74
PAROPEN (328) 6 11 12 13 14 67 98 99 101 102 103 106 107
PARCLOSE (329) 6 11 12 13 14 67 98 99 101 102 103 106 107
BOXOPEN (330) 59 85 86
BOXCLOSE (331) 59 85 86
SEMI (332) 90 91 92 93 94 96 99 102
DP (333)
POINT (334)
COMMA (335) 8 10 88
SHARP (336)
DOLLAR (337)
QMARK (338) 107


Nonterminals, with rules where they appear

$accept (84)
    on left: 0
program (85)
    on left: 1, on right: 0
block (86)
    on left: 2, on right: 68 69 70 93 98 99 100 101 102
switchblock (87)
    on left: 3, on right: 103
labeled_stmtlist (88)
    on left: 4 5, on right: 3 5
labeled_statement (89)
    on left: 6, on right: 4 5
explist (90)
    on left: 7 8, on right: 8 13 19 99 100
exp_cast_list (91)
    on left: 9 10, on right: 10 73 74
parlist (92)
    on left: 11 12, on right: 68 69 70
arglist (93)
    on left: 13 14, on right: 61
idlist (94)
    on left: 15 16, on right: 11 16 19 100
stmtlist (95)
    on left: 17 18, on right: 1 2 6 18
assignment (96)
    on left: 19, on right: 90 96 99
assop (97)
    on left: 20 21 22 23 24 25 26 27 28 29 30 31, on right: 19
expression (98)
    on left: 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49
    50 51 52 53, on right: 6 7 8 10 32 33 34 35 36 37 38 39 40 41 42
    43 44 45 46 47 48 49 50 51 52 59 67 71 72 89 98 99 101 102 103
evalexpression (99)
    on left: 54 55 56 57 58 59 60, on right: 53 59 61
functioncall (100)
    on left: 61, on right: 60 94
end_exp (101)
    on left: 62 63 64 65 66 67, on right: 58
functiondef (102)
    on left: 68 69 70, on right: 95 97
hotkeydef (103)
    on left: 71, on right: 69
hotstringdef (104)
    on left: 72, on right: 70
ffi_struct_def (105)
    on left: 73 74, on right: 57
ffi_cast (106)
    on left: 75 76 77 78 79 80 81 82 83, on right: 10
ffi_void_cast (107)
    on left: 84, on right: 83
listconstructor (108)
    on left: 85 86, on right: 56
fieldlist (109)
    on left: 87 88, on right: 86 88
field (110)
    on left: 89, on right: 87 88
statement (111)
    on left: 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104,
    on right: 17 18
fceblock (112)
    on left: 105, on right: 104
fceexp (113)
    on left: 106, on right: 54
fceexp_rc (114)
    on left: 107, on right: 55


state 0

    0 $accept: . program $end

    MUL       shift, and go to state 1
    IF        shift, and go to state 2
    GLOBAL    shift, and go to state 3
    CONTINUE  shift, and go to state 4
    BREAK     shift, and go to state 5
    FOR       shift, and go to state 6
    WHILE     shift, and go to state 7
    DO        shift, and go to state 8
    SWITCH    shift, and go to state 9
    FUNCTION  shift, and go to state 10
    EXTERNAL  shift, and go to state 11
    TRUE      shift, and go to state 12
    FALSE     shift, and go to state 13
    STRING    shift, and go to state 14
    NUMBER    shift, and go to state 15
    ID        shift, and go to state 16
    CURLOPEN  shift, and go to state 17
    PAROPEN   shift, and go to state 18
    BOXOPEN   shift, and go to state 19

    program          go to state 20
    block            go to state 21
    idlist           go to state 22
    stmtlist         go to state 23
    assignment       go to state 24
    evalexpression   go to state 25
    functioncall     go to state 26
    end_exp          go to state 27
    functiondef      go to state 28
    ffi_struct_def   go to state 29
    listconstructor  go to state 30
    statement        go to state 31
    fceblock         go to state 32
    fceexp           go to state 33
    fceexp_rc        go to state 34


state 1

   74 ffi_struct_def: MUL . CURLOPEN exp_cast_list CURLCLOSE

    CURLOPEN  shift, and go to state 35


state 2

   98 statement: IF . PAROPEN expression PARCLOSE block

    PAROPEN  shift, and go to state 36


state 3

   96 statement: GLOBAL . assignment SEMI
   97          | GLOBAL . functiondef

    FUNCTION  shift, and go to state 10
    ID        shift, and go to state 37

    idlist       go to state 22
    assignment   go to state 38
    functiondef  go to state 39


state 4

   92 statement: CONTINUE . SEMI

    SEMI  shift, and go to state 40


state 5

   91 statement: BREAK . SEMI

    SEMI  shift, and go to state 41


state 6

   99 statement: FOR . PAROPEN assignment SEMI expression SEMI explist PARCLOSE block
  100          | FOR . idlist IN explist block

    ID       shift, and go to state 37
    PAROPEN  shift, and go to state 42

    idlist  go to state 43


state 7

  101 statement: WHILE . PAROPEN expression PARCLOSE block

    PAROPEN  shift, and go to state 44


state 8

  102 statement: DO . block WHILE PAROPEN expression PARCLOSE SEMI

    CURLOPEN  shift, and go to state 45

    block  go to state 46


state 9

  103 statement: SWITCH . PAROPEN expression PARCLOSE switchblock

    PAROPEN  shift, and go to state 47


state 10

   68 functiondef: FUNCTION . ID parlist block
   69            | FUNCTION . ID parlist hotkeydef block
   70            | FUNCTION . ID parlist hotstringdef block

    ID  shift, and go to state 48


state 11

  105 fceblock: EXTERNAL . FCELANG FCEB_CODE

    FCELANG  shift, and go to state 49


state 12

   63 end_exp: TRUE .

    $default  reduce using rule 63 (end_exp)


state 13

   64 end_exp: FALSE .

    $default  reduce using rule 64 (end_exp)


state 14

   66 end_exp: STRING .

    $default  reduce using rule 66 (end_exp)


state 15

   65 end_exp: NUMBER .

    $default  reduce using rule 65 (end_exp)


state 16

   15 idlist: ID .
   62 end_exp: ID .

    PAROPEN   reduce using rule 62 (end_exp)
    BOXOPEN   reduce using rule 62 (end_exp)
    $default  reduce using rule 15 (idlist)


state 17

    2 block: CURLOPEN . stmtlist CURLCLOSE
   73 ffi_struct_def: CURLOPEN . exp_cast_list CURLCLOSE

    MUL              shift, and go to state 1
    IF               shift, and go to state 2
    GLOBAL           shift, and go to state 3
    CONTINUE         shift, and go to state 4
    BREAK            shift, and go to state 5
    FOR              shift, and go to state 6
    WHILE            shift, and go to state 7
    DO               shift, and go to state 8
    SWITCH           shift, and go to state 9
    FUNCTION         shift, and go to state 10
    EXTERNAL         shift, and go to state 11
    TRUE             shift, and go to state 12
    FALSE            shift, and go to state 13
    STRING           shift, and go to state 14
    NUMBER           shift, and go to state 15
    ID               shift, and go to state 16
    FFI_CHAR         shift, and go to state 50
    FFI_SHORT        shift, and go to state 51
    FFI_INT          shift, and go to state 52
    FFI_LONG         shift, and go to state 53
    FFI_LONG_LONG    shift, and go to state 54
    FFI_DOUBLE       shift, and go to state 55
    FFI_FLOAT        shift, and go to state 56
    FFI_LONG_DOUBLE  shift, and go to state 57
    FFI_VOIDPTR      shift, and go to state 58
    CURLOPEN         shift, and go to state 17
    PAROPEN          shift, and go to state 18
    BOXOPEN          shift, and go to state 19

    $default  reduce using rule 9 (exp_cast_list)

    block            go to state 21
    exp_cast_list    go to state 59
    idlist           go to state 22
    stmtlist         go to state 60
    assignment       go to state 24
    evalexpression   go to state 25
    functioncall     go to state 26
    end_exp          go to state 27
    functiondef      go to state 28
    ffi_struct_def   go to state 29
    ffi_cast         go to state 61
    ffi_void_cast    go to state 62
    listconstructor  go to state 30
    statement        go to state 31
    fceblock         go to state 32
    fceexp           go to state 33
    fceexp_rc        go to state 34


state 18

   67 end_exp: PAROPEN . expression PARCLOSE
  106 fceexp: PAROPEN . NOT FCELANG PARCLOSE FCEB_CODE
  107 fceexp_rc: PAROPEN . QMARK FCELANG PARCLOSE FCEB_CODE

    MUL       shift, and go to state 1
    NOT       shift, and go to state 63
    COMPL     shift, and go to state 64
    TRUE      shift, and go to state 12
    FALSE     shift, and go to state 13
    STRING    shift, and go to state 14
    NUMBER    shift, and go to state 15
    ID        shift, and go to state 65
    CURLOPEN  shift, and go to state 66
    PAROPEN   shift, and go to state 18
    BOXOPEN   shift, and go to state 19
    QMARK     shift, and go to state 67

    expression       go to state 68
    evalexpression   go to state 69
    functioncall     go to state 70
    end_exp          go to state 27
    ffi_struct_def   go to state 29
    listconstructor  go to state 30
    fceexp           go to state 33
    fceexp_rc        go to state 34


state 19

   85 listconstructor: BOXOPEN . BOXCLOSE
   86                | BOXOPEN . fieldlist BOXCLOSE

    MUL       shift, and go to state 1
    NOT       shift, and go to state 71
    COMPL     shift, and go to state 64
    TRUE      shift, and go to state 12
    FALSE     shift, and go to state 13
    STRING    shift, and go to state 14
    NUMBER    shift, and go to state 15
    ID        shift, and go to state 65
    CURLOPEN  shift, and go to state 66
    PAROPEN   shift, and go to state 18
    BOXOPEN   shift, and go to state 19
    BOXCLOSE  shift, and go to state 72

    expression       go to state 73
    evalexpression   go to state 69
    functioncall     go to state 70
    end_exp          go to state 27
    ffi_struct_def   go to state 29
    listconstructor  go to state 30
    fieldlist        go to state 74
    field            go to state 75
    fceexp           go to state 33
    fceexp_rc        go to state 34


state 20

    0 $accept: program . $end

    $end  shift, and go to state 76


state 21

   93 statement: block . SEMI

    SEMI  shift, and go to state 77


state 22

   16 idlist: idlist . ID
   19 assignment: idlist . assop explist

    ASSOP         shift, and go to state 78
    ASPLUS        shift, and go to state 79
    ASMINUS       shift, and go to state 80
    ASMUL         shift, and go to state 81
    ASDIV         shift, and go to state 82
    ASMOD         shift, and go to state 83
    ASPOW         shift, and go to state 84
    ASBINOR       shift, and go to state 85
    ASBINAND      shift, and go to state 86
    ASBINXOR      shift, and go to state 87
    ASRIGHTSHIFT  shift, and go to state 88
    ASLEFTSHIFT   shift, and go to state 89
    ID            shift, and go to state 90

    assop  go to state 91


state 23

    1 program: stmtlist .
   18 stmtlist: stmtlist . statement

    MUL       shift, and go to state 1
    IF        shift, and go to state 2
    GLOBAL    shift, and go to state 3
    CONTINUE  shift, and go to state 4
    BREAK     shift, and go to state 5
    FOR       shift, and go to state 6
    WHILE     shift, and go to state 7
    DO        shift, and go to state 8
    SWITCH    shift, and go to state 9
    FUNCTION  shift, and go to state 10
    EXTERNAL  shift, and go to state 11
    TRUE      shift, and go to state 12
    FALSE     shift, and go to state 13
    STRING    shift, and go to state 14
    NUMBER    shift, and go to state 15
    ID        shift, and go to state 16
    CURLOPEN  shift, and go to state 17
    PAROPEN   shift, and go to state 18
    BOXOPEN   shift, and go to state 19

    $default  reduce using rule 1 (program)

    block            go to state 21
    idlist           go to state 22
    assignment       go to state 24
    evalexpression   go to state 25
    functioncall     go to state 26
    end_exp          go to state 27
    functiondef      go to state 28
    ffi_struct_def   go to state 29
    listconstructor  go to state 30
    statement        go to state 92
    fceblock         go to state 32
    fceexp           go to state 33
    fceexp_rc        go to state 34


state 24

   90 statement: assignment . SEMI

    SEMI  shift, and go to state 93


state 25

   59 evalexpression: evalexpression . BOXOPEN expression BOXCLOSE
   61 functioncall: evalexpression . arglist

    PAROPEN  shift, and go to state 94
    BOXOPEN  shift, and go to state 95

    arglist  go to state 96


state 26

   60 evalexpression: functioncall .
   94 statement: functioncall . SEMI

    SEMI  shift, and go to state 97

    $default  reduce using rule 60 (evalexpression)


state 27

   58 evalexpression: end_exp .

    $default  reduce using rule 58 (evalexpression)


state 28

   95 statement: functiondef .

    $default  reduce using rule 95 (statement)


state 29

   57 evalexpression: ffi_struct_def .

    $default  reduce using rule 57 (evalexpression)


state 30

   56 evalexpression: listconstructor .

    $default  reduce using rule 56 (evalexpression)


state 31

   17 stmtlist: statement .

    $default  reduce using rule 17 (stmtlist)


state 32

  104 statement: fceblock .

    $default  reduce using rule 104 (statement)


state 33

   54 evalexpression: fceexp .

    $default  reduce using rule 54 (evalexpression)


state 34

   55 evalexpression: fceexp_rc .

    $default  reduce using rule 55 (evalexpression)


state 35

   74 ffi_struct_def: MUL CURLOPEN . exp_cast_list CURLCLOSE

    FFI_CHAR         shift, and go to state 50
    FFI_SHORT        shift, and go to state 51
    FFI_INT          shift, and go to state 52
    FFI_LONG         shift, and go to state 53
    FFI_LONG_LONG    shift, and go to state 54
    FFI_DOUBLE       shift, and go to state 55
    FFI_FLOAT        shift, and go to state 56
    FFI_LONG_DOUBLE  shift, and go to state 57
    FFI_VOIDPTR      shift, and go to state 58

    $default  reduce using rule 9 (exp_cast_list)

    exp_cast_list  go to state 98
    ffi_cast       go to state 61
    ffi_void_cast  go to state 62


state 36

   98 statement: IF PAROPEN . expression PARCLOSE block

    MUL       shift, and go to state 1
    NOT       shift, and go to state 71
    COMPL     shift, and go to state 64
    TRUE      shift, and go to state 12
    FALSE     shift, and go to state 13
    STRING    shift, and go to state 14
    NUMBER    shift, and go to state 15
    ID        shift, and go to state 65
    CURLOPEN  shift, and go to state 66
    PAROPEN   shift, and go to state 18
    BOXOPEN   shift, and go to state 19

    expression       go to state 99
    evalexpression   go to state 69
    functioncall     go to state 70
    end_exp          go to state 27
    ffi_struct_def   go to state 29
    listconstructor  go to state 30
    fceexp           go to state 33
    fceexp_rc        go to state 34


state 37

   15 idlist: ID .

    $default  reduce using rule 15 (idlist)


state 38

   96 statement: GLOBAL assignment . SEMI

    SEMI  shift, and go to state 100


state 39

   97 statement: GLOBAL functiondef .

    $default  reduce using rule 97 (statement)


state 40

   92 statement: CONTINUE SEMI .

    $default  reduce using rule 92 (statement)


state 41

   91 statement: BREAK SEMI .

    $default  reduce using rule 91 (statement)


state 42

   99 statement: FOR PAROPEN . assignment SEMI expression SEMI explist PARCLOSE block

    ID  shift, and go to state 37

    idlist      go to state 22
    assignment  go to state 101


state 43

   16 idlist: idlist . ID
  100 statement: FOR idlist . IN explist block

    IN  shift, and go to state 102
    ID  shift, and go to state 90


state 44

  101 statement: WHILE PAROPEN . expression PARCLOSE block

    MUL       shift, and go to state 1
    NOT       shift, and go to state 71
    COMPL     shift, and go to state 64
    TRUE      shift, and go to state 12
    FALSE     shift, and go to state 13
    STRING    shift, and go to state 14
    NUMBER    shift, and go to state 15
    ID        shift, and go to state 65
    CURLOPEN  shift, and go to state 66
    PAROPEN   shift, and go to state 18
    BOXOPEN   shift, and go to state 19

    expression       go to state 103
    evalexpression   go to state 69
    functioncall     go to state 70
    end_exp          go to state 27
    ffi_struct_def   go to state 29
    listconstructor  go to state 30
    fceexp           go to state 33
    fceexp_rc        go to state 34


state 45

    2 block: CURLOPEN . stmtlist CURLCLOSE

    MUL       shift, and go to state 1
    IF        shift, and go to state 2
    GLOBAL    shift, and go to state 3
    CONTINUE  shift, and go to state 4
    BREAK     shift, and go to state 5
    FOR       shift, and go to state 6
    WHILE     shift, and go to state 7
    DO        shift, and go to state 8
    SWITCH    shift, and go to state 9
    FUNCTION  shift, and go to state 10
    EXTERNAL  shift, and go to state 11
    TRUE      shift, and go to state 12
    FALSE     shift, and go to state 13
    STRING    shift, and go to state 14
    NUMBER    shift, and go to state 15
    ID        shift, and go to state 16
    CURLOPEN  shift, and go to state 17
    PAROPEN   shift, and go to state 18
    BOXOPEN   shift, and go to state 19

    block            go to state 21
    idlist           go to state 22
    stmtlist         go to state 60
    assignment       go to state 24
    evalexpression   go to state 25
    functioncall     go to state 26
    end_exp          go to state 27
    functiondef      go to state 28
    ffi_struct_def   go to state 29
    listconstructor  go to state 30
    statement        go to state 31
    fceblock         go to state 32
    fceexp           go to state 33
    fceexp_rc        go to state 34


state 46

  102 statement: DO block . WHILE PAROPEN expression PARCLOSE SEMI

    WHILE  shift, and go to state 104


state 47

  103 statement: SWITCH PAROPEN . expression PARCLOSE switchblock

    MUL       shift, and go to state 1
    NOT       shift, and go to state 71
    COMPL     shift, and go to state 64
    TRUE      shift, and go to state 12
    FALSE     shift, and go to state 13
    STRING    shift, and go to state 14
    NUMBER    shift, and go to state 15
    ID        shift, and go to state 65
    CURLOPEN  shift, and go to state 66
    PAROPEN   shift, and go to state 18
    BOXOPEN   shift, and go to state 19

    expression       go to state 105
    evalexpression   go to state 69
    functioncall     go to state 70
    end_exp          go to state 27
    ffi_struct_def   go to state 29
    listconstructor  go to state 30
    fceexp           go to state 33
    fceexp_rc        go to state 34


state 48

   68 functiondef: FUNCTION ID . parlist block
   69            | FUNCTION ID . parlist hotkeydef block
   70            | FUNCTION ID . parlist hotstringdef block

    PAROPEN  shift, and go to state 106

    parlist  go to state 107


state 49

  105 fceblock: EXTERNAL FCELANG . FCEB_CODE

    FCEB_CODE  shift, and go to state 108


state 50

   75 ffi_cast: FFI_CHAR .

    $default  reduce using rule 75 (ffi_cast)


state 51

   76 ffi_cast: FFI_SHORT .

    $default  reduce using rule 76 (ffi_cast)


state 52

   77 ffi_cast: FFI_INT .

    $default  reduce using rule 77 (ffi_cast)


state 53

   78 ffi_cast: FFI_LONG .

    $default  reduce using rule 78 (ffi_cast)


state 54

   79 ffi_cast: FFI_LONG_LONG .

    $default  reduce using rule 79 (ffi_cast)


state 55

   80 ffi_cast: FFI_DOUBLE .

    $default  reduce using rule 80 (ffi_cast)


state 56

   81 ffi_cast: FFI_FLOAT .

    $default  reduce using rule 81 (ffi_cast)


state 57

   82 ffi_cast: FFI_LONG_DOUBLE .

    $default  reduce using rule 82 (ffi_cast)


state 58

   84 ffi_void_cast: FFI_VOIDPTR .

    $default  reduce using rule 84 (ffi_void_cast)


state 59

   73 ffi_struct_def: CURLOPEN exp_cast_list . CURLCLOSE

    CURLCLOSE  shift, and go to state 109


state 60

    2 block: CURLOPEN stmtlist . CURLCLOSE
   18 stmtlist: stmtlist . statement

    MUL        shift, and go to state 1
    IF         shift, and go to state 2
    GLOBAL     shift, and go to state 3
    CONTINUE   shift, and go to state 4
    BREAK      shift, and go to state 5
    FOR        shift, and go to state 6
    WHILE      shift, and go to state 7
    DO         shift, and go to state 8
    SWITCH     shift, and go to state 9
    FUNCTION   shift, and go to state 10
    EXTERNAL   shift, and go to state 11
    TRUE       shift, and go to state 12
    FALSE      shift, and go to state 13
    STRING     shift, and go to state 14
    NUMBER     shift, and go to state 15
    ID         shift, and go to state 16
    CURLOPEN   shift, and go to state 17
    CURLCLOSE  shift, and go to state 110
    PAROPEN    shift, and go to state 18
    BOXOPEN    shift, and go to state 19

    block            go to state 21
    idlist           go to state 22
    assignment       go to state 24
    evalexpression   go to state 25
    functioncall     go to state 26
    end_exp          go to state 27
    functiondef      go to state 28
    ffi_struct_def   go to state 29
    listconstructor  go to state 30
    statement        go to state 92
    fceblock         go to state 32
    fceexp           go to state 33
    fceexp_rc        go to state 34


state 61

   10 exp_cast_list: ffi_cast . expression COMMA exp_cast_list

    MUL       shift, and go to state 1
    NOT       shift, and go to state 71
    COMPL     shift, and go to state 64
    TRUE      shift, and go to state 12
    FALSE     shift, and go to state 13
    STRING    shift, and go to state 14
    NUMBER    shift, and go to state 15
    ID        shift, and go to state 65
    CURLOPEN  shift, and go to state 66
    PAROPEN   shift, and go to state 18
    BOXOPEN   shift, and go to state 19

    expression       go to state 111
    evalexpression   go to state 69
    functioncall     go to state 70
    end_exp          go to state 27
    ffi_struct_def   go to state 29
    listconstructor  go to state 30
    fceexp           go to state 33
    fceexp_rc        go to state 34


state 62

   83 ffi_cast: ffi_void_cast .

    $default  reduce using rule 83 (ffi_cast)


state 63

   52 expression: NOT . expression
  106 fceexp: PAROPEN NOT . FCELANG PARCLOSE FCEB_CODE

    MUL       shift, and go to state 1
    NOT       shift, and go to state 71
    COMPL     shift, and go to state 64
    TRUE      shift, and go to state 12
    FALSE     shift, and go to state 13
    STRING    shift, and go to state 14
    NUMBER    shift, and go to state 15
    ID        shift, and go to state 65
    FCELANG   shift, and go to state 112
    CURLOPEN  shift, and go to state 66
    PAROPEN   shift, and go to state 18
    BOXOPEN   shift, and go to state 19

    expression       go to state 113
    evalexpression   go to state 69
    functioncall     go to state 70
    end_exp          go to state 27
    ffi_struct_def   go to state 29
    listconstructor  go to state 30
    fceexp           go to state 33
    fceexp_rc        go to state 34


state 64

   51 expression: COMPL . expression

    MUL       shift, and go to state 1
    NOT       shift, and go to state 71
    COMPL     shift, and go to state 64
    TRUE      shift, and go to state 12
    FALSE     shift, and go to state 13
    STRING    shift, and go to state 14
    NUMBER    shift, and go to state 15
    ID        shift, and go to state 65
    CURLOPEN  shift, and go to state 66
    PAROPEN   shift, and go to state 18
    BOXOPEN   shift, and go to state 19

    expression       go to state 114
    evalexpression   go to state 69
    functioncall     go to state 70
    end_exp          go to state 27
    ffi_struct_def   go to state 29
    listconstructor  go to state 30
    fceexp           go to state 33
    fceexp_rc        go to state 34


state 65

   62 end_exp: ID .

    $default  reduce using rule 62 (end_exp)


state 66

   73 ffi_struct_def: CURLOPEN . exp_cast_list CURLCLOSE

    FFI_CHAR         shift, and go to state 50
    FFI_SHORT        shift, and go to state 51
    FFI_INT          shift, and go to state 52
    FFI_LONG         shift, and go to state 53
    FFI_LONG_LONG    shift, and go to state 54
    FFI_DOUBLE       shift, and go to state 55
    FFI_FLOAT        shift, and go to state 56
    FFI_LONG_DOUBLE  shift, and go to state 57
    FFI_VOIDPTR      shift, and go to state 58

    $default  reduce using rule 9 (exp_cast_list)

    exp_cast_list  go to state 59
    ffi_cast       go to state 61
    ffi_void_cast  go to state 62


state 67

  107 fceexp_rc: PAROPEN QMARK . FCELANG PARCLOSE FCEB_CODE

    FCELANG  shift, and go to state 115


state 68

   32 expression: expression . OR expression
   33           | expression . AND expression
   34           | expression . BINOR expression
   35           | expression . BINXOR expression
   36           | expression . BINAND expression
   37           | expression . EQUAL expression
   38           | expression . NOTEQUAL expression
   39           | expression . GREATERTHAN expression
   40           | expression . LESSTHAN expression
   41           | expression . GREATER expression
   42           | expression . LESS expression
   43           | expression . LEFTSHIFT expression
   44           | expression . RIGHTSHIFT expression
   45           | expression . PLUS expression
   46           | expression . MINUS expression
   47           | expression . MUL expression
   48           | expression . DIV expression
   49           | expression . MOD expression
   50           | expression . POW expression
   67 end_exp: PAROPEN expression . PARCLOSE

    OR           shift, and go to state 116
    AND          shift, and go to state 117
    BINOR        shift, and go to state 118
    BINXOR       shift, and go to state 119
    BINAND       shift, and go to state 120
    NOTEQUAL     shift, and go to state 121
    EQUAL        shift, and go to state 122
    LESS         shift, and go to state 123
    GREATER      shift, and go to state 124
    LESSTHAN     shift, and go to state 125
    GREATERTHAN  shift, and go to state 126
    RIGHTSHIFT   shift, and go to state 127
    LEFTSHIFT    shift, and go to state 128
    MINUS        shift, and go to state 129
    PLUS         shift, and go to state 130
    MOD          shift, and go to state 131
    DIV          shift, and go to state 132
    MUL          shift, and go to state 133
    POW          shift, and go to state 134
    PARCLOSE     shift, and go to state 135


state 69

   53 expression: evalexpression .
   59 evalexpression: evalexpression . BOXOPEN expression BOXCLOSE
   61 functioncall: evalexpression . arglist

    PAROPEN  shift, and go to state 94
    BOXOPEN  shift, and go to state 95

    $default  reduce using rule 53 (expression)

    arglist  go to state 96


state 70

   60 evalexpression: functioncall .

    $default  reduce using rule 60 (evalexpression)


state 71

   52 expression: NOT . expression

    MUL       shift, and go to state 1
    NOT       shift, and go to state 71
    COMPL     shift, and go to state 64
    TRUE      shift, and go to state 12
    FALSE     shift, and go to state 13
    STRING    shift, and go to state 14
    NUMBER    shift, and go to state 15
    ID        shift, and go to state 65
    CURLOPEN  shift, and go to state 66
    PAROPEN   shift, and go to state 18
    BOXOPEN   shift, and go to state 19

    expression       go to state 113
    evalexpression   go to state 69
    functioncall     go to state 70
    end_exp          go to state 27
    ffi_struct_def   go to state 29
    listconstructor  go to state 30
    fceexp           go to state 33
    fceexp_rc        go to state 34


state 72

   85 listconstructor: BOXOPEN BOXCLOSE .

    $default  reduce using rule 85 (listconstructor)


state 73

   32 expression: expression . OR expression
   33           | expression . AND expression
   34           | expression . BINOR expression
   35           | expression . BINXOR expression
   36           | expression . BINAND expression
   37           | expression . EQUAL expression
   38           | expression . NOTEQUAL expression
   39           | expression . GREATERTHAN expression
   40           | expression . LESSTHAN expression
   41           | expression . GREATER expression
   42           | expression . LESS expression
   43           | expression . LEFTSHIFT expression
   44           | expression . RIGHTSHIFT expression
   45           | expression . PLUS expression
   46           | expression . MINUS expression
   47           | expression . MUL expression
   48           | expression . DIV expression
   49           | expression . MOD expression
   50           | expression . POW expression
   89 field: expression .
